--- a/AIRelief/Views/Admin/UserAdmin/Index.cshtml
+++ b/AIRelief/Views/Admin/UserAdmin/Index.cshtml
@@ -30,6 +30,7 @@
                                 <th>Group</th>
                                 <th>Auth Level</th>
                                 <th>Created</th>
+                                <th>Last Question Attempt</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -43,6 +44,7 @@
                                         <span class="badge bg-info text-dark">@user.AuthLevel</span>
                                     </td>
                                     <td>@user.CreatedDate.ToString("yyyy-MM-dd")</td>
+                                    <td>@(user.DatetimeOfLastQuestionAttempt.HasValue ? user.DatetimeOfLastQuestionAttempt.Value.ToString("dd MMM yyyy HH:mm") : "Never")</td>
                                 </tr>
                             }
                         </tbody>
