--- a/AIRelief/Views/Questions/Create.cshtml
+++ b/AIRelief/Views/Questions/Create.cshtml
@@ -14,29 +14,29 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="heading" class="control-label"></label>
-                <input asp-for="heading" class="form-control" />
-                <span asp-validation-for="heading" class="text-danger"></span>
+                <label asp-for="QuestionText" class="control-label"></label>
+                <input asp-for="QuestionText" class="form-control" />
+                <span asp-validation-for="QuestionText" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="maintext" class="control-label"></label>
-                <input asp-for="maintext" class="form-control" />
-                <span asp-validation-for="maintext" class="text-danger"></span>
+                <label asp-for="MainText" class="control-label"></label>
+                <input asp-for="MainText" class="form-control" />
+                <span asp-validation-for="MainText" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="image" class="control-label"></label>
-                <input asp-for="image" class="form-control" />
-                <span asp-validation-for="image" class="text-danger"></span>
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="explanationtext" class="control-label"></label>
-                <textarea asp-for="explanationtext" class="form-control" rows="3"></textarea>
-                <span asp-validation-for="explanationtext" class="text-danger"></span>
+                <label asp-for="ExplanationText" class="control-label"></label>
+                <textarea asp-for="ExplanationText" class="form-control" rows="3"></textarea>
+                <span asp-validation-for="ExplanationText" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="explanationimage" class="control-label"></label>
-                <input asp-for="explanationimage" class="form-control" />
-                <span asp-validation-for="explanationimage" class="text-danger"></span>
+                <label asp-for="ExplanationImage" class="control-label"></label>
+                <input asp-for="ExplanationImage" class="form-control" />
+                <span asp-validation-for="ExplanationImage" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Option1" class="control-label"></label>
