--- a/AIRelief/Views/Questions/Delete.cshtml
+++ b/AIRelief/Views/Questions/Delete.cshtml
@@ -13,34 +13,34 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.heading)
+            @Html.DisplayNameFor(model => model.QuestionText)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.heading)
+            @Html.DisplayFor(model => model.QuestionText)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.maintext)
+            @Html.DisplayNameFor(model => model.MainText)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.maintext)
+            @Html.DisplayFor(model => model.MainText)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.image)
+            @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.image)
+            @Html.DisplayFor(model => model.Image)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.explanationtext)
+            @Html.DisplayNameFor(model => model.ExplanationText)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.explanationtext)
+            @Html.DisplayFor(model => model.ExplanationText)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.explanationimage)
+            @Html.DisplayNameFor(model => model.ExplanationImage)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.explanationimage)
+            @Html.DisplayFor(model => model.ExplanationImage)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Option1)
