--- a/AIRelief/Views/Shared/_AdminNavPartial.cshtml
+++ b/AIRelief/Views/Shared/_AdminNavPartial.cshtml
@@ -33,6 +33,7 @@
                 <li><a class="dropdown-item" href="/Admin/SystemAdmin/Groups">Manage Groups</a></li>
                 <li><a class="dropdown-item" href="/Admin/SystemAdmin/Users">Manage Users</a></li>
                 <li><a class="dropdown-item" href="/Admin/SystemAdmin/SystemAdmins">Manage System Admins</a></li>
+                <li><a class="dropdown-item" href="/Admin/SystemAdmin/BulkQuestions">Question Bulk Management</a></li>
             }
         </ul>
     </li>
