--- a/AIRelief/Views/Admin/GroupAdmin/CreateUser.cshtml
+++ b/AIRelief/Views/Admin/GroupAdmin/CreateUser.cshtml
@@ -35,7 +35,7 @@
                         </div>
                         <div class="admin-form-group">
                             <label asp-for="AuthLevel" class="form-label">Authentication Level</label>
-                            <select asp-for="AuthLevel" class="form-select" asp-items="Html.GetEnumSelectList<AIRelief.Models.AuthLevel>()"></select>
+                            <select asp-for="AuthLevel" class="form-select" asp-items="Html.GetEnumSelectList<AIRelief.Models.AuthLevel>().Where(i => i.Value != ((int)AIRelief.Models.AuthLevel.SystemAdmin).ToString()).ToList()"></select>
                             <span asp-validation-for="AuthLevel" class="text-danger"></span>
                         </div>
                         <div class="admin-form-group">
