--- a/AIRelief/Views/Trial/_QuestionPartial.cshtml
+++ b/AIRelief/Views/Trial/_QuestionPartial.cshtml
@@ -1,18 +1,18 @@
 ﻿@model Question
 
 <div class="question-card" data-question-id="@Model.ID">
-    @if (!string.IsNullOrEmpty(Model.heading))
+    @if (!string.IsNullOrEmpty(Model.QuestionText))
     {
-        <h2 class="question-heading">@Model.heading</h2>
+        <h2 class="question-heading">@Model.QuestionText</h2>
     }
 
     <div class="question-content">
-        <p class="question-text">@Model.maintext</p>
+        <p class="question-text">@Model.MainText</p>
 
-        @if (!string.IsNullOrEmpty(Model.image))
+        @if (!string.IsNullOrEmpty(Model.Image))
         {
             <div class="question-image">
-                <img src="~/images/QuestionImages/@Model.image" alt="Question illustration" class="img-fluid" />
+                <img src="~/images/QuestionImages/@Model.Image" alt="Question illustration" class="img-fluid" />
             </div>
         }
     </div>
